[gd_scene load_steps=19 format=3 uid="uid://cxwycg2mqpk4x"]

[ext_resource type="Script" path="res://nodes/robot/robot.gd" id="1_sd8df"]
[ext_resource type="Script" path="res://nodes/robot/tray.gd" id="3_ke7y6"]
[ext_resource type="Texture2D" uid="uid://dt7naf5bpnsh1" path="res://sprites/robot/robot_body.png" id="4_0u65a"]
[ext_resource type="Texture2D" uid="uid://cqm386iyj4u1f" path="res://sprites/robot/tray.png" id="4_behex"]
[ext_resource type="AudioStream" uid="uid://d3iny184d8c8e" path="res://sfx/tap/tap1.wav" id="5_1eg5p"]
[ext_resource type="AudioStream" uid="uid://of18vwprr3eh" path="res://music/Labatro_shortened.wav" id="5_2oyu0"]
[ext_resource type="AudioStream" uid="uid://dq1j3huh1bnph" path="res://sfx/tap/tap2.wav" id="6_4vlmv"]
[ext_resource type="Script" path="res://nodes/robot/input_controller.gd" id="6_780db"]
[ext_resource type="AudioStream" uid="uid://cqiu0opi8dmjt" path="res://sfx/tap/tap3.wav" id="7_et6ig"]
[ext_resource type="Script" path="res://nodes/robot/gameplay_area.gd" id="7_nuw8w"]
[ext_resource type="Script" path="res://nodes/robot/item_throw_controller.gd" id="8_5wxah"]
[ext_resource type="AudioStream" uid="uid://b41i4tx8kc7p" path="res://sfx/tap/tap4.wav" id="8_6guuh"]

[sub_resource type="Animation" id="Animation_c5f1u"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Tray/Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(512, 0, 64, 56), Rect2(576, 0, 64, 56), Rect2(640, 0, 64, 56), Rect2(704, 0, 64, 56), Rect2(768, 0, 64, 56), Rect2(832, 0, 64, 56), Rect2(896, 0, 64, 56), Rect2(960, 0, 64, 56)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Tray/Sprite2D:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:region_rect")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(512, 0, 64, 56), Rect2(576, 0, 64, 56), Rect2(640, 0, 64, 56), Rect2(704, 0, 64, 56), Rect2(768, 0, 64, 56), Rect2(832, 0, 64, 56), Rect2(896, 0, 64, 56), Rect2(960, 0, 64, 56)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:offset")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_il4hy"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Tray/Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(0, 0, 64, 56), Rect2(64, 0, 64, 56), Rect2(128, 0, 64, 56), Rect2(192, 0, 64, 56), Rect2(256, 0, 64, 56), Rect2(320, 0, 64, 56), Rect2(384, 0, 64, 56), Rect2(448, 0, 64, 56)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Tray/Sprite2D:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:region_rect")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(0, 0, 64, 56), Rect2(64, 0, 64, 56), Rect2(128, 0, 64, 56), Rect2(192, 0, 64, 56), Rect2(256, 0, 64, 56), Rect2(320, 0, 64, 56), Rect2(384, 0, 64, 56), Rect2(448, 0, 64, 56)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:offset")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eqex0"]
_data = {
"idle": SubResource("Animation_c5f1u"),
"walk": SubResource("Animation_il4hy")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ngyj"]
size = Vector2(94, 4)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_1w24w"]
random_pitch = 1.2
random_volume_offset_db = 0.5
streams_count = 4
stream_0/stream = ExtResource("5_1eg5p")
stream_1/stream = ExtResource("6_4vlmv")
stream_2/stream = ExtResource("7_et6ig")
stream_3/stream = ExtResource("8_6guuh")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_esbbn"]
size = Vector2(1024, 512)

[node name="Robot" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 7
floor_stop_on_slope = false
floor_constant_speed = true
floor_block_on_wall = false
safe_margin = 0.16
script = ExtResource("1_sd8df")
move_speed = 120.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -124)
zoom = Vector2(2, 2)

[node name="Body" type="Node2D" parent="."]
position = Vector2(0, -28)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body"]
libraries = {
"": SubResource("AnimationLibrary_eqex0")
}
autoplay = "walk"

[node name="Sprite2D" type="Sprite2D" parent="Body"]
texture = ExtResource("4_0u65a")
region_enabled = true
region_rect = Rect2(0, 0, 64, 56)

[node name="Tray" type="CharacterBody2D" parent="."]
position = Vector2(0, -60)
collision_mask = 13
motion_mode = 1
script = ExtResource("3_ke7y6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tray"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_1ngyj")

[node name="Sprite2D" type="Sprite2D" parent="Tray"]
texture = ExtResource("4_behex")
region_rect = Rect2(0, 0, 64, 56)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Tray"]
stream = SubResource("AudioStreamRandomizer_1w24w")
max_polyphony = 3
bus = &"SFX"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(0, -28)
polygon = PackedVector2Array(0, 28, 30, 0, 30, -15, 17, -25, 0, -27, -18, -24, -31, -13, -31, 0)

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_2oyu0")
volume_db = -12.0
pitch_scale = 0.01
autoplay = true
max_polyphony = 2
bus = &"Music"

[node name="InputController" type="Node" parent="."]
script = ExtResource("6_780db")

[node name="GameplayArea" type="Area2D" parent="."]
position = Vector2(0, -28)
script = ExtResource("7_nuw8w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameplayArea"]
position = Vector2(0, -95)
shape = SubResource("RectangleShape2D_esbbn")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="ItemThrowController" type="Node2D" parent="." node_paths=PackedStringArray("shoot_target")]
position = Vector2(0, -28)
script = ExtResource("8_5wxah")
shoot_target = NodePath("TargetPoint")
shoot_speed = 3000.0

[node name="SpawnPoint" type="Node2D" parent="ItemThrowController"]
position = Vector2(1, -305)

[node name="TargetPoint" type="Node2D" parent="ItemThrowController"]
position = Vector2(1, 0)

[node name="NextSectionSpawnPoint" type="Node2D" parent="."]
position = Vector2(400, 0)

[connection signal="button_pressed" from="InputController" to="." method="_on_input_controller_button_pressed"]
[connection signal="button_pressed" from="InputController" to="ItemThrowController" method="_on_input_controller_button_pressed"]
[connection signal="left_hand_input_changed" from="InputController" to="Tray" method="_on_input_controller_left_hand_input_changed"]
[connection signal="right_hand_input_changed" from="InputController" to="Tray" method="_on_input_controller_right_hand_input_changed"]
[connection signal="body_exited" from="GameplayArea" to="GameplayArea" method="_on_body_exited"]
